--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -16,20 +16,20 @@ html
 		meta(content="width=device-width, initial-scale=1, maximum-scale=2.0", name="viewport")
 		meta(content="48a2415d-980f-4763-a5b9-e10e000636b3", name="cab-guid")
 		meta(content="EWS", name="cab-extent")
-		meta(content="/static/images/apple-touch-icon.png")
+		meta(content="../../static/images/apple-touch-icon.png")
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="css/guide.css", rel="stylesheet")
-		link(href="images/favicon/32.png", rel="shortcut icon")
-		link(href="images/favicon/228.png", rel="apple-touch-icon")
+		link(href="../../css/guide.css", rel="stylesheet")
+		link(href="../../images/favicon/32.png", rel="shortcut icon")
+		link(href="../../images/favicon/228.png", rel="apple-touch-icon")
 
 		// Javascript
-		script(src="js/vendor/jquery-1.11.3.min.js")
-		script(src="js/beta-dap-accordion.js")
-		script(src="js/collapse.js")
-		script(src="js/prism.js")
-		script(src="js/smooth.js")
+		script(src="../../js/vendor/jquery-1.11.3.min.js")
+		script(src="../../js/beta-dap-accordion.js")
+		script(src="../../js/collapse.js")
+		script(src="../../js/prism.js")
+		script(src="../../js/smooth.js")
 		script.
 			var filename = document.location.pathname.match(/[^\/]+$/)[0];
 			$(document).ready(function() {
@@ -70,7 +70,7 @@ html
 		#main-nav-3--nav
 			.content
 				a.logo(href="index.html")
-					img(src="images/ca-logo-hz-280px.svg")
+					img(src="../../images/ca-logo-hz-280px.svg")
 				ul
 					li#get-advice
 						a Get Advice
@@ -204,7 +204,7 @@ html
 							p #[a(href="#") Report to Trading Standards ]
 							p #[a(href="#") Consumer ]
 					.col-md-6.col-sm-12.hide-mobile.home--feature
-						img(src="../images/sample-blog/man_on_phone.svg" alt="" style="width:100%;")
+						img(src="../../images/sample-blog/man_on_phone.svg" alt="" style="width:100%;")
 
 
 		.home-second
@@ -228,14 +228,14 @@ html
 							.blog-name
 								p Latest Blog
 								h3 #[a(href="#") Payday loans: An improved market? ]
-							img(src="../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
+							img(src="../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
 							p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
 
 					div.col-sm-4.col-sm-12.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
 						.card-banner-top
 							p(style="color:#57486b;") Help others
 						.card-text
-							img(src="../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
+							img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
 							p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
 							fieldset
 								label(for="standardField", style="color:#57486b;") Search your area
@@ -247,7 +247,7 @@ html
 							.blog-name
 								p Volunteer opportunities
 								h3 #[a(href="#") Become a volunteer in your community ]
-							img(src="../images/sample-blog/pip-feature-images-2.jpg" alt="Become a volunteer" style="width:100%;")
+							img(src="../../images/sample-blog/pip-feature-images-2.jpg" alt="Become a volunteer" style="width:100%;")
 							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
 		//.footer-feedback
@@ -291,7 +291,7 @@ html
 
 			.footer--legal
 				.footer--legal--content
-					img(alt="", src="../images/ca_wo-logo-100px.svg")
+					img(alt="", src="../../images/ca_wo-logo-100px.svg")
 					p
 						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 						br
@@ -299,6 +299,6 @@ html
 
 
 		<!--[if IE 8]></div><![endif]-->
-		script(src="js/advisor.js")
-		script(src="js/core.js")
+		script(src="../../js/advisor.js")
+		script(src="../../js/core.js")
 		block script-bottom
