--- a/libs/jade/dev/site/content-v3-home.jade
+++ b/libs/jade/dev/site/content-v3-home.jade
@@ -1,68 +1,28 @@
 block settings
     - var title = "How to fill in your PIP claim form"
     - var sidebar = true
-    - var toolbars = true
+    - var toolbars = false
     //- var cookiemonster = true
     - var mockup = true
+    - var dir = "../../"
 
-extends ../template/template-v2.jade
-
-block breadcrumbs
-    +breadcrumbs([
-        {title: "Home", href: "index.html"},
-        {title: "Templates", href: "index.html#templates"},
-        {title: "Content"}])
-
-block sidebar
-    - var section = "Before you claim PIP"
-    +sidebar([
-        {title: "How to fill in your PIP claim form"},
-        {title: "How to claim PIP"},
-        {title: "How to claim PIP if you have a terminal illness"},
-        {title: "How to fill in your claim form"},
-        {title: "Getting evidence to support your PIP claim"},
-        {title: "Preparing for your PIP assessment"},
-        {title: "Changes that affect your PIP"}
-        ],0)
-
-
-    .cards.side-nav-beta(style="color:#fff; background-color:#32457E;")
-        .card-banner-top
-            p(style="color:#fff;") Policy
-        .card-image-top
-            img(src="images/laptop-branding.png" alt="Laptop")
-        .card-text
-            p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-            button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
-
-
-    //.cards.side-nav-beta(style="color:#fff; background-color:#006278;")
-        .card-banner-top(style="background-color:#006278;")
-            p(style="color:#fff;") Campaigns
-
-        .card-image-top
-            img(src="images/mother_with_children.jpg" alt="Mother with two daughters")
-
-        .card-text
-            p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-            button.btn.btn-primary.right-button-icon(type="button") Continue
-
-    .speech-lines.side-nav-beta
-        h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-        p Quote from William Shakespear 1690
-        .box-speech-line
-block section-notice
-    aside.section-notice--dev
-        h2.screenreader Notice
-        .section-notice--dev__content
-            p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
+extends /template/template-v3-home.jade
 
 block script
     script.
         $(document).ready(function($) {
             $('#get-advice').click(function(){
                 $(this).toggleClass("active");
-                $('#main-nav-2--dropdown').slideToggle('fast');
+                $('#main-nav-3--dropdown').slideToggle('fast');
+                $('#main-nav-3--dropdown-1').removeClass("active");
+            });
+        });
+    script.
+        $(document).ready(function($) {
+            $('#get-involved').click(function(){
+                $(this).toggleClass("active");
+                $('#main-nav-3--dropdown-1').slideToggle('fast');
+                $('#main-nav-3--dropdown').removeClass("active");
             });
         });
 
