--- a/libs/modules/main-nav-v3.less
+++ b/libs/modules/main-nav-v3.less
@@ -17,6 +17,12 @@
                 list-style: none;
                 padding: 1rem 0;
             }
+            &:hover,
+            &:focus,
+            &:visited {
+                border: none;
+                background: none;
+            }
         }
         ul {
             list-style: none;
@@ -43,13 +49,13 @@
                     &:hover {
                         background-color: @blue-lighter;
                     }
-                    &:after {
+                    /*&:after {
                         font-weight: 300;
                         content: @i-down;
                         padding: 0 0 0 @box-spacing-horizontal/2;
                         .icon;
                         font-size: @font-size-base;
-                    }
+                    }*/
                 }
                 &.active a {
                     background-color: @blue-lighter;
@@ -64,12 +70,20 @@
                 border-color: @white;
                 width: 100%;
                 padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
+                &:focus {
+                    outline: none;
+                    border-color: @heritage-yellow;
+                }
             }
             button {
                 border: none;
                 width: 100%;
                 margin: 0;
                 padding: @box-spacing-vertical/2 @box-spacing-horizontal;
+                &:focus {
+                    outline: none;
+                    border-color: @heritage-yellow !important;
+                }
             }
             @media screen and (max-width: @screen-xs-max) {
                 display: block;
@@ -173,7 +187,7 @@
             }
         }
         @media screen and (max-width: 820px) {
-            ul,
+            //ul,
             .search {
                 display: none;
             }
