add: Created styles and syntax for mobile navigation
Created a new stylesheet called main-nav-beta that contains almost production ready code to manage the new heading. The new heading has been coded into the template with new syntax to create a dropdown search bar

--- a/libs/site.less
+++ b/libs/site.less
@@ -89,6 +89,7 @@
 @import "modules/main-nav-v1";
 @import "modules/main-nav-v2";
 @import "modules/main-nav-v3";
+@import "modules/main-nav-beta.less";
 @import "modules/home.less";
 @import "modules/landing.less";
 
