--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -47,9 +47,9 @@ html.no-js
 			.branding
 				.content
 					ul
-						li
+						li(href="#")
 							a Cymraeg
-						li
+						li(href="#")
 							a Sign in
 			.navigation
 				.content
@@ -59,11 +59,11 @@ html.no-js
 
 					ul
 						li#get-advice
-							a
+							a(href="#")
 								span Get&nbsp;
 								span Advice
 						li#get-involved
-							a
+							a(href="#")
 								span Get&nbsp;
 								span Involved
 						li#search-toggle
