--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -67,7 +67,8 @@ html.no-js
 								span Get&nbsp;
 								span Involved
 						li#search-toggle
-							i.icon-search
+							a(href="#")
+								i.icon-search
 
 					.search
 						.field-group.field-group--buttons
