Dev: Update group landing page

--- a/libs/modules/main-nav-v3.less
+++ b/libs/modules/main-nav-v3.less
@@ -213,3 +213,17 @@
         }
     }
 }
+
+/*  
+    Group content index page
+    Top level content areas
+*/
+
+.group-index-list {
+    border-bottom: 1px solid @gray-7;
+    padding: 0 .5em 0.5rem 0;
+    margin-right: 2rem;
+    @media screen and (max-width: @screen-xs-max) {
+        margin-right: 0;
+    }
+}
