fix: Adding clear: both to full width blocks for older browser support
Full width blocks were stacking oddly in IE9 and sometimes 10. Adding clear:both; seems to solve this issue.

--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -62,8 +62,9 @@
     }
 }
 
-// NEW FOOTER?
+// NEW FOOTER
 #footer {
+    clear: both;
     .footer-content {
         .limit-width(@breakpoint-lg);
         padding: 0 1rem;
