--- a/libs/modules/landing.less
+++ b/libs/modules/landing.less
@@ -1,9 +1,11 @@
 .fullwidth-yellow {
 	background-color: @heritage-yellow-lighter;
+	clear: both;
 }
 
 .fullwidth-blue {
 	background-color: @heritage-blue-lighter;
+	clear: both;
 }
 
 .fullwidth-content {
