add: Added a spinning icon and a mixin to use it
Created a spinning icon to show loading states as @i-spinner \903. Also created .spinner(), which lets people easily add it for :before or :after content. Also created .spinner-button-icon as a class which can be used for buttons.

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -278,4 +278,5 @@
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
 @i-github:					"\e902";
+@i-spinner:					"\e903";
 @i-zws: 					"_";
