--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1260,6 +1260,10 @@ div.tooltip:before {
         content: @i-github;
     }
 
+    .i-spinner .icon:before {
+        .spinner;
+    }
+
     .brand-accelerator .icon-brand:before {
         content: @brand-accelerator;
     }
