--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -323,3 +323,8 @@ block content
 						td github
 						td.variable @i-github
 						td.unicode \e902
+					tr.i-spinner
+						td.icon
+						td spinner
+						td.variable @i-spinner
+						td.unicode \e903
