--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -27,6 +27,15 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.spinner() {
+    content: @i-spinner;
+    animation: spin 1.5s infinite linear;
+    @keyframes spin {
+        from {transform:rotate(0deg);}
+        to {transform:rotate(360deg);}
+    }
+}
+
 // Inline icons for use in paragraph and headings
 .inline-icon {
     .icon;
@@ -129,6 +138,18 @@
 }
 .close-button-icon {
     .btn-icon(@i-cross);
+}
+.spinner-button-icon {
+    .btn-icon(@i-spinner);
+    content: @i-spinner;
+    &:after {
+        animation: spin 1.5s infinite linear;
+        top: 25%;
+        @keyframes spin {
+            from {transform: rotate(0deg);}
+            to {transform: rotate(360deg);}
+        }
+    }
 }
 
 // Social icons
