add: Created .btn-loading as a new button styles
Created the new button style for .btn-loading, which also sets the cursor to wait, an important feature of the button. Add this button to the buttons.jade page

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -180,6 +180,16 @@ button:disabled {
     }
 }
 
+.btn-loading {
+    .btn(
+        @white,
+        @generous-mauve,
+        @generous-mauve
+    );
+    .spinner-button-icon;
+    cursor: wait;
+}
+
 // Small Button styles
 
 /*.btn-small,
