--- a/libs/jade/forms/buttons.jade
+++ b/libs/jade/forms/buttons.jade
@@ -71,11 +71,13 @@ block content
 				button.btn-disabled(disabled, type="button") Continue
 				button.btn-success(type="button") Success
 				button.btn-warning.exclamation-button-icon(type="button") Warning
+				button.btn-loading(type="button") Loading...
 			pre
 				code.language-html
 					| &lt;button disabled type="button" class="btn-disabled"&gt;Continue&lt;/button&gt;
 					| &lt;button type="button" class="btn-success"&gt;Success&lt;/button&gt;
 					| &lt;button type="button" class="btn-warning exclamation-button-icon"&gt;Warning&lt;/button&gt;
+					| &lt;button type="button" class="btn-loading"&gt;Warning&lt;/button&gt;
 
 			h2 Buttons (right)
 			.example-box-plain
