--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -123,7 +123,7 @@ input[type=button] {
 .button--grey {
     cursor: not-allowed;
     .btn(
-        @gray-3,
+        @gray-2,
         @gray-6,
         @gray-6
     );
@@ -132,13 +132,13 @@ input[type=button] {
 button:disabled {
     border-color: @gray-6;
     background-color: @gray-6;
-    color: @gray-3;
+    color: @gray-2;
     &:hover,
     &:active,
     &:visited {
         border-color: @gray-6;
         background-color: @gray-6;
-        color: @gray-3;
+        color: @gray-2;
     }
 }
 
@@ -182,12 +182,15 @@ button:disabled {
 
 .btn-loading {
     .btn(
-        @white,
-        @generous-mauve,
-        @generous-mauve
+        @gray-2,
+        @gray-6,
+        @gray-6
     );
     .spinner-button-icon;
     cursor: wait;
+    &:after {
+        color: @gray-2;
+    }
 }
 
 // Small Button styles
