change: Made spinning a global mixin
Turned the CSS for spinning into a mixin (spin.less), which is then being called by the button style for loaders

--- a/libs/site.less
+++ b/libs/site.less
@@ -29,6 +29,7 @@
 @import "mixins/vertical-align";
 @import "mixins/btn-icon";
 @import "mixins/ie";
+@import "mixins/spin";
 //@import "mixins/spacing";
 
 /* Module files */
