--- a/libs/tools.less
+++ b/libs/tools.less
@@ -33,6 +33,7 @@
 	@import "mixins/btn-icon";
 	//@import "mixins/spacing";
 	@import "mixins/ie";
+	@import "mixins/spin";
 
 	/* Module files */
 	//@import "modules/extent-switcher-modal";
