--- a/libs/mixins/spin.less
+++ b/libs/mixins/spin.less
@@ -4,8 +4,8 @@
  * Mixins for creating icons and elements that spin
  */
 
-.spinner() {
-    animation: spin 1.5s infinite linear;
+.spinner(@time: 1.5;) {
+    animation: spin unit(@time, s) infinite linear;
     @keyframes spin {
         from {transform:rotate(0deg);}
         to {transform:rotate(360deg);}
@@ -15,6 +15,6 @@
 .btn-spinner() {
     &:after {
         top: 25%;
-        .spinner;
+        .spinner(3.5);
     }
 }
