--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -19,15 +19,21 @@ span[id*="overlay_button"] {
 
 .callout--adviser,
 .dap-panel--adviser {
+        //box-shadow: 0px 0px 5px @gray-3;
     .callout(
-        @inventive-teal-lightest,
+        @white,
         @text-color,
         @callout-border: @inventive-teal-light
     );
+        border-top: 0px;
+        border-right: 0px;
+        border-bottom: 0px;
     .callout--border--left;
-    .callout--icon("Adviser only content");
+    .callout--icon("Adviser");
     &:before {
-        color: @white;
+        color: @inventive-teal;
+        font-weight: @font-weight-bolder;
+        background-color: @white;
     }
 }
 
