Dev: Minor update to adviser style

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -33,7 +33,9 @@ span[id*="overlay_button"] {
     &:before {
         color: @inventive-teal;
         font-weight: @font-weight-bolder;
+        font-size: @font-size-base;
         background-color: @white;
+        padding: .5rem 0 0 1rem;
     }
 }
 
