--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -21,7 +21,7 @@ span[id*="overlay_button"] {
 .dap-panel--adviser {
         //box-shadow: 0px 0px 5px @gray-3;
     .callout(
-        @white,
+        lighten(@inventive-teal-lightest, 9%),
         @text-color,
         @callout-border: @inventive-teal-light
     );
@@ -33,7 +33,7 @@ span[id*="overlay_button"] {
         color: @inventive-teal;
         font-weight: @font-weight-bolder;
         font-size: @font-size-base;
-        background-color: @white;
+        background-color: lighten(@inventive-teal-lightest, 9%);
         padding: .75rem 0 0 1rem;
     }
 }
