dev: Created a mockup of the financial statement printout that we can use for PDF creation

--- a/libs/site.less
+++ b/libs/site.less
@@ -84,6 +84,7 @@
 @import "modules/savebar";
 @import "modules/cards";
 @import "modules/blog";
+@import "modules/financial-statement";
 
 /* IE styles */
 @import "base/ie";
