--- a/libs/modules/financial-statement.less
+++ b/libs/modules/financial-statement.less
@@ -1,4 +1,5 @@
 #financial-statement {
+	font-size: 14px;
 	margin: 10mm auto;
 	min-height: 297mm;
 	width: 210mm;
@@ -19,6 +20,7 @@
 	td,
 	th {
 		padding: 1em*(1/6) 1em*(1/3);
+		page-break-inside: avoid;
 	}
 	table {
 		@media print {
@@ -26,10 +28,17 @@
 		}
 	}
 	.lines {
+		font-size: 10px;
+		font-weight: bolder;
+		color: @gray-3;
 		tr,
 		td,
 		th {
+			padding: 1em*(2/3);
 			border-width: 0px 0px 1px 0px;
 		}
+	}
+	.amount {
+		width: 20%;
 	}
 }
