--- a/libs/jade/dev/post-tool-3/post-tool-4.jade
+++ b/libs/jade/dev/post-tool-3/post-tool-4.jade
@@ -16,8 +16,34 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Your emails have been sent
+			h2 Send your emails
+			p Please confirm that you’d like to email Royal Mail, ‘Your Choice’ scheme and Mailing Preference Service.
+			p You’ll get an email confirmation from the organisations.
 
-			p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
+			section.revealable
+				h2 Email Royal Mail 'Door to Door'
+				p Charities, businesses and other organisations often pay Royal Mail to deliver marketing post for them. Tick this box to send an email to Royal Mail saying that you don't want this marketing post.
+				p They’ll send you a form to fill in.
 
-			p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door straight away. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
+			section.revealable
+				h2 Email the ‘Your Choice’ scheme
+				p The ‘Your Choice’ scheme allows you to get less marketing mail from various organisations, including government, political parties, charities, and businesses.
+				p This means you won’t get leaflets, for example from political parties or your local council, but you’ll still get any post that’s directly addressed to you.
+				p They’ll send you a form to fill in.
+
+			section.revealable
+				h2 Email the Mailing Preference Service
+				p The Mailing Preference Service keep a list of people who don’t want to get marketing post. Businesses that check this list will stop sending you mail. Tick this box to add your address to the list.
+				p They’ll send you a confirmation email.
+
+			h2 Your letter for your local electoral registration office
+			p Your local electoral registration office is #[strong London Borough of Bromley].
+
+			section.revealable
+				h2 Write to your electoral registration office
+				p Your local electoral registration office keeps a list of addresses called the ‘open register’. This list can be bought and used it to send junk mail. Tick this box to download a letter to send to your local office, asking them to remove you from the open register. It won’t affect your right to vote.
+
+			p We will send you details on how to contact your local electoral office in your confirmation email.
+
+			a.btn-light.left-button-icon(href="post-tool-3.html") Edit details
+			a.btn-secondary.email-button-icon(href="post-tool-5.html") Send and finish
