--- a/libs/jade/dev/post-tool-3/post-tool-5.jade
+++ b/libs/jade/dev/post-tool-3/post-tool-5.jade
@@ -16,17 +16,8 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Confirm your details
-			p Please confirm your details are correct, you can go back to edit them.
-			p Your name
-				br
-				| 1 Road name
-				br
-				| Townname
-				br
-				| A1 1AA
-				br
-				| email@addres.com
+			h2 Your emails have been sent
 
-			a.btn-light.left-button-icon(href="post-tool-2.html") Edit details
-			a.btn.right-button-icon(href="post-tool-4.html") Confirm
+			p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
+
+			p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door straight away. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
